<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlideshowDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="choose_frequency_label">Choose frequency of slide change</string>
    <string name="current_frequency_label">Current frequency: </string>
    <string name="scale_animation_label">Scale up-down</string>
    <string name="fade_animation_label">Fade in-out</string>
    <string name="slide_animation_label">Slide left-right</string>
    <string name="choose_transition_animation_label">Choose transition animation</string>

</resources>
